# quadruped

./: CMakeLists.txt  README.md  cpg_test.sh  simulation.sh
js/control_panel/: Load_proto.js  index.html  index.js  quadruped.js  style.css
js/control_panel/css/: style.css
protos/: motor.proto
src/: CMakeLists.txt
src/cpg/: CMakeLists.txt  Kuramoto.cpp  Kuramoto.hpp  main.cpp
src/estimation/: CMakeLists.txt  EKF.cpp  EKF.hpp  Estimation.hpp  Estimator.hpp  KF.cpp  KF.hpp  KF_webot.cpp  ObservationModel.cpp  ObservationModel.hpp  Optimizer.hpp  ParticleFilter.cpp  ParticleFilter.hpp  definition.cpp  definition.hpp  estimation.cpp  estimation2.cpp  main.cpp  test_ekf.cpp  test_kf.cpp
src/estimation.bak/: ObservationModel.hpp  Optimizer.hpp  estimation2.cpp
src/estimation.bak2/: CMakeLists.txt  ContactMap.hpp  ObservationModel.cpp  ObservationModel.hpp  estimation.cpp
src/fpga_driver/src/: fpga_server.cpp
src/fsm/: FSM_listen.cpp
src/imu/: CMakeLists.txt  cx5.hpp  imu.cpp
src/kinematic/: Leg.cpp  Leg.hpp  LinkLegModel.cpp  LinkLegModel.hpp  quicktest.cpp
